force-app/main/default/objects/ssot__ContactPointSocial__dlm/fields/ssot__FollowersCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__FollowersCount__c</fullName>
    <label>Followers Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FollowersCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>