force-app/main/default/objects/ssot__ContactPointSocial__dlm/fields/ssot__SocialFanStatusId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SocialFanStatusId__c</fullName>
    <label>Social Fan Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SocialFanStatusId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>