force-app/main/default/objects/ssot__ContactPointSocial__dlm/fields/ssot__SocialHandleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SocialHandleId__c</fullName>
    <label>Social Handle Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SocialHandleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>