force-app/main/default/objects/ssot__ContactPointSocial__dlm/fields/ssot__SocialHandleName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SocialHandleName__c</fullName>
    <label>Social Handle Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SocialHandleName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>