force-app/main/default/objects/ssot__ContactPointSocial__dlm/fields/ssot__SocialNetworkProviderId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SocialNetworkProviderId__c</fullName>
    <label>Social Network Provider</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SocialNetworkProviderId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>